--- a/.config
+++ b/.config
@@ -93,7 +93,7 @@ CONFIG_RT_USING_COMPONENTS_INIT=y
 CONFIG_RT_USING_USER_MAIN=y
 CONFIG_RT_MAIN_THREAD_STACK_SIZE=2048
 CONFIG_RT_MAIN_THREAD_PRIORITY=10
-# CONFIG_RT_USING_LEGACY is not set
+CONFIG_RT_USING_LEGACY=y
 CONFIG_RT_USING_MSH=y
 CONFIG_RT_USING_FINSH=y
 CONFIG_FINSH_USING_MSH=y
@@ -109,7 +109,39 @@ CONFIG_FINSH_USING_DESCRIPTION=y
 # CONFIG_FINSH_ECHO_DISABLE_DEFAULT is not set
 # CONFIG_FINSH_USING_AUTH is not set
 CONFIG_FINSH_ARG_MAX=10
-# CONFIG_RT_USING_DFS is not set
+CONFIG_RT_USING_DFS=y
+CONFIG_DFS_USING_POSIX=y
+CONFIG_DFS_USING_WORKDIR=y
+CONFIG_DFS_FILESYSTEMS_MAX=4
+CONFIG_DFS_FILESYSTEM_TYPES_MAX=4
+CONFIG_DFS_FD_MAX=16
+# CONFIG_RT_USING_DFS_MNTTABLE is not set
+CONFIG_RT_USING_DFS_ELMFAT=y
+
+#
+# elm-chan's FatFs, Generic FAT Filesystem Module
+#
+CONFIG_RT_DFS_ELM_CODE_PAGE=437
+CONFIG_RT_DFS_ELM_WORD_ACCESS=y
+# CONFIG_RT_DFS_ELM_USE_LFN_0 is not set
+# CONFIG_RT_DFS_ELM_USE_LFN_1 is not set
+# CONFIG_RT_DFS_ELM_USE_LFN_2 is not set
+CONFIG_RT_DFS_ELM_USE_LFN_3=y
+CONFIG_RT_DFS_ELM_USE_LFN=3
+CONFIG_RT_DFS_ELM_LFN_UNICODE_0=y
+# CONFIG_RT_DFS_ELM_LFN_UNICODE_1 is not set
+# CONFIG_RT_DFS_ELM_LFN_UNICODE_2 is not set
+# CONFIG_RT_DFS_ELM_LFN_UNICODE_3 is not set
+CONFIG_RT_DFS_ELM_LFN_UNICODE=0
+CONFIG_RT_DFS_ELM_MAX_LFN=255
+CONFIG_RT_DFS_ELM_DRIVES=2
+CONFIG_RT_DFS_ELM_MAX_SECTOR_SIZE=512
+# CONFIG_RT_DFS_ELM_USE_ERASE is not set
+CONFIG_RT_DFS_ELM_REENTRANT=y
+CONFIG_RT_DFS_ELM_MUTEX_TIMEOUT=3000
+# CONFIG_RT_USING_DFS_DEVFS is not set
+CONFIG_RT_USING_DFS_ROMFS=y
+# CONFIG_RT_USING_DFS_RAMFS is not set
 # CONFIG_RT_USING_FAL is not set
 # CONFIG_RT_USING_LWP is not set
 
@@ -135,8 +167,16 @@ CONFIG_RT_USING_PWM=y
 # CONFIG_RT_USING_MTD_NOR is not set
 # CONFIG_RT_USING_MTD_NAND is not set
 # CONFIG_RT_USING_PM is not set
-# CONFIG_RT_USING_RTC is not set
-# CONFIG_RT_USING_SDIO is not set
+CONFIG_RT_USING_RTC=y
+# CONFIG_RT_USING_ALARM is not set
+# CONFIG_RT_USING_SOFT_RTC is not set
+CONFIG_RT_USING_SDIO=y
+CONFIG_RT_SDIO_STACK_SIZE=512
+CONFIG_RT_SDIO_THREAD_PRIORITY=15
+CONFIG_RT_MMCSD_STACK_SIZE=1024
+CONFIG_RT_MMCSD_THREAD_PREORITY=22
+CONFIG_RT_MMCSD_MAX_PARTITION=16
+CONFIG_RT_SDIO_DEBUG=y
 # CONFIG_RT_USING_SPI is not set
 # CONFIG_RT_USING_WDT is not set
 # CONFIG_RT_USING_AUDIO is not set
@@ -340,25 +380,7 @@ CONFIG_RT_USING_CPLUSPLUS=y
 #
 # LVGL: powerful and easy-to-use embedded GUI library
 #
-CONFIG_PKG_USING_LVGL=y
-CONFIG_PKG_LVGL_PATH="/packages/multimedia/LVGL/LVGL"
-CONFIG_PKG_LVGL_THREAD_PRIO=20
-CONFIG_PKG_LVGL_THREAD_STACK_SIZE=4096
-CONFIG_PKG_LVGL_DISP_REFR_PERIOD=5
-# CONFIG_PKG_USING_LVGL_SQUARELINE is not set
-# CONFIG_PKG_LVGL_USING_EXAMPLES is not set
-CONFIG_PKG_LVGL_USING_DEMOS=y
-CONFIG_PKG_LVGL_USING_V08035=y
-# CONFIG_PKG_LVGL_USING_V08034 is not set
-# CONFIG_PKG_LVGL_USING_V08033 is not set
-# CONFIG_PKG_LVGL_USING_V08032 is not set
-# CONFIG_PKG_LVGL_USING_V08031 is not set
-# CONFIG_PKG_LVGL_USING_V08030 is not set
-# CONFIG_PKG_LVGL_USING_V08020 is not set
-# CONFIG_PKG_LVGL_USING_V8_3_LATEST_VERSION is not set
-# CONFIG_PKG_LVGL_USING_LATEST_VERSION is not set
-CONFIG_PKG_LVGL_VER_NUM=0x08035
-CONFIG_PKG_LVGL_VER="v8.3.5"
+# CONFIG_PKG_USING_LVGL is not set
 # CONFIG_PKG_USING_LITTLEVGL2RTT is not set
 # CONFIG_PKG_USING_LV_MUSIC_DEMO is not set
 # CONFIG_PKG_USING_GUI_GUIDER_DEMO is not set
@@ -596,6 +618,7 @@ CONFIG_PKG_LVGL_VER="v8.3.5"
 # CONFIG_PKG_USING_CST816X is not set
 # CONFIG_PKG_USING_REALTEK_AMEBA is not set
 # CONFIG_PKG_USING_STM32_SDIO is not set
+CONFIG_SDIO_MAX_FREQ=1000000
 # CONFIG_PKG_USING_ESP_IDF is not set
 # CONFIG_PKG_USING_BUTTON is not set
 # CONFIG_PKG_USING_PCF8574 is not set
@@ -989,8 +1012,13 @@ CONFIG_SOC_STM32F407ZG=y
 # Onboard Peripheral Drivers
 #
 CONFIG_BSP_USING_SRAM=y
+CONFIG_BSP_USING_EXT_FMC_IO=y
+CONFIG_BSP_USING_FMC=y
 CONFIG_BSP_USING_ONBOARD_LCD=y
 CONFIG_BSP_USING_ONBOARD_LCD_PWM_BL=y
+CONFIG_BSP_USING_FS=y
+CONFIG_BSP_USING_SDCARD_FATFS=y
+# CONFIG_BSP_USING_FS_AUTO_MOUNT is not set
 
 #
 # On-chip Peripheral Drivers
@@ -1000,17 +1028,16 @@ CONFIG_BSP_USING_UART=y
 CONFIG_BSP_USING_UART1=y
 # CONFIG_BSP_UART1_RX_USING_DMA is not set
 # CONFIG_BSP_UART1_TX_USING_DMA is not set
-CONFIG_BSP_USING_TIM=y
-CONFIG_BSP_USING_TIM11=y
-# CONFIG_BSP_USING_TIM13 is not set
-# CONFIG_BSP_USING_TIM14 is not set
+# CONFIG_BSP_USING_TIM is not set
 CONFIG_BSP_USING_PWM=y
 # CONFIG_BSP_USING_PWM2 is not set
 # CONFIG_BSP_USING_PWM3 is not set
 CONFIG_BSP_USING_PWM14=y
 CONFIG_BSP_USING_PWM14_CH1=y
-CONFIG_BSP_USING_EXT_FMC_IO=y
-CONFIG_BSP_USING_FMC=y
+CONFIG_BSP_USING_ONCHIP_RTC=y
+CONFIG_BSP_RTC_USING_LSE=y
+# CONFIG_BSP_RTC_USING_LSI is not set
+CONFIG_BSP_USING_SDIO=y
 # CONFIG_BSP_USING_RNG is not set
 # CONFIG_BSP_USING_UDID is not set
 
