--- a/.config
+++ b/.config
@@ -380,7 +380,25 @@ CONFIG_RT_USING_CPLUSPLUS=y
 #
 # LVGL: powerful and easy-to-use embedded GUI library
 #
-# CONFIG_PKG_USING_LVGL is not set
+CONFIG_PKG_USING_LVGL=y
+CONFIG_PKG_LVGL_PATH="/packages/multimedia/LVGL/LVGL"
+CONFIG_PKG_LVGL_THREAD_PRIO=20
+CONFIG_PKG_LVGL_THREAD_STACK_SIZE=4096
+CONFIG_PKG_LVGL_DISP_REFR_PERIOD=5
+# CONFIG_PKG_USING_LVGL_SQUARELINE is not set
+CONFIG_PKG_LVGL_USING_EXAMPLES=y
+# CONFIG_PKG_LVGL_USING_DEMOS is not set
+CONFIG_PKG_LVGL_USING_V08035=y
+# CONFIG_PKG_LVGL_USING_V08034 is not set
+# CONFIG_PKG_LVGL_USING_V08033 is not set
+# CONFIG_PKG_LVGL_USING_V08032 is not set
+# CONFIG_PKG_LVGL_USING_V08031 is not set
+# CONFIG_PKG_LVGL_USING_V08030 is not set
+# CONFIG_PKG_LVGL_USING_V08020 is not set
+# CONFIG_PKG_LVGL_USING_V8_3_LATEST_VERSION is not set
+# CONFIG_PKG_LVGL_USING_LATEST_VERSION is not set
+CONFIG_PKG_LVGL_VER_NUM=0x08035
+CONFIG_PKG_LVGL_VER="v8.3.5"
 # CONFIG_PKG_USING_LITTLEVGL2RTT is not set
 # CONFIG_PKG_USING_LV_MUSIC_DEMO is not set
 # CONFIG_PKG_USING_GUI_GUIDER_DEMO is not set
