--- a/.config
+++ b/.config
@@ -386,7 +386,7 @@ CONFIG_PKG_LVGL_THREAD_PRIO=20
 CONFIG_PKG_LVGL_THREAD_STACK_SIZE=4096
 CONFIG_PKG_LVGL_DISP_REFR_PERIOD=5
 # CONFIG_PKG_USING_LVGL_SQUARELINE is not set
-CONFIG_PKG_LVGL_USING_EXAMPLES=y
+# CONFIG_PKG_LVGL_USING_EXAMPLES is not set
 # CONFIG_PKG_LVGL_USING_DEMOS is not set
 CONFIG_PKG_LVGL_USING_V08035=y
 # CONFIG_PKG_LVGL_USING_V08034 is not set
