--- a/.config
+++ b/.config
@@ -158,7 +158,10 @@ CONFIG_RT_SERIAL_RB_BUFSZ=64
 # CONFIG_RT_USING_CAN is not set
 CONFIG_RT_USING_HWTIMER=y
 # CONFIG_RT_USING_CPUTIME is not set
-# CONFIG_RT_USING_I2C is not set
+CONFIG_RT_USING_I2C=y
+# CONFIG_RT_I2C_DEBUG is not set
+CONFIG_RT_USING_I2C_BITOPS=y
+# CONFIG_RT_I2C_BITOPS_DEBUG is not set
 # CONFIG_RT_USING_PHY is not set
 CONFIG_RT_USING_PIN=y
 # CONFIG_RT_USING_ADC is not set
@@ -179,7 +182,10 @@ CONFIG_RT_MMCSD_MAX_PARTITION=16
 CONFIG_RT_SDIO_DEBUG=y
 # CONFIG_RT_USING_SPI is not set
 # CONFIG_RT_USING_WDT is not set
-# CONFIG_RT_USING_AUDIO is not set
+CONFIG_RT_USING_AUDIO=y
+CONFIG_RT_AUDIO_REPLAY_MP_BLOCK_SIZE=4096
+CONFIG_RT_AUDIO_REPLAY_MP_BLOCK_COUNT=2
+CONFIG_RT_AUDIO_RECORD_PIPE_SIZE=2048
 # CONFIG_RT_USING_SENSOR is not set
 # CONFIG_RT_USING_TOUCH is not set
 # CONFIG_RT_USING_HWCRYPTO is not set
@@ -380,25 +386,7 @@ CONFIG_RT_USING_CPLUSPLUS=y
 #
 # LVGL: powerful and easy-to-use embedded GUI library
 #
-CONFIG_PKG_USING_LVGL=y
-CONFIG_PKG_LVGL_PATH="/packages/multimedia/LVGL/LVGL"
-CONFIG_PKG_LVGL_THREAD_PRIO=20
-CONFIG_PKG_LVGL_THREAD_STACK_SIZE=4096
-CONFIG_PKG_LVGL_DISP_REFR_PERIOD=5
-# CONFIG_PKG_USING_LVGL_SQUARELINE is not set
-# CONFIG_PKG_LVGL_USING_EXAMPLES is not set
-# CONFIG_PKG_LVGL_USING_DEMOS is not set
-CONFIG_PKG_LVGL_USING_V08035=y
-# CONFIG_PKG_LVGL_USING_V08034 is not set
-# CONFIG_PKG_LVGL_USING_V08033 is not set
-# CONFIG_PKG_LVGL_USING_V08032 is not set
-# CONFIG_PKG_LVGL_USING_V08031 is not set
-# CONFIG_PKG_LVGL_USING_V08030 is not set
-# CONFIG_PKG_LVGL_USING_V08020 is not set
-# CONFIG_PKG_LVGL_USING_V8_3_LATEST_VERSION is not set
-# CONFIG_PKG_LVGL_USING_LATEST_VERSION is not set
-CONFIG_PKG_LVGL_VER_NUM=0x08035
-CONFIG_PKG_LVGL_VER="v8.3.5"
+# CONFIG_PKG_USING_LVGL is not set
 # CONFIG_PKG_USING_LITTLEVGL2RTT is not set
 # CONFIG_PKG_USING_LV_MUSIC_DEMO is not set
 # CONFIG_PKG_USING_GUI_GUIDER_DEMO is not set
@@ -1037,6 +1025,7 @@ CONFIG_BSP_USING_ONBOARD_LCD_PWM_BL=y
 CONFIG_BSP_USING_FS=y
 CONFIG_BSP_USING_SDCARD_FATFS=y
 # CONFIG_BSP_USING_FS_AUTO_MOUNT is not set
+# CONFIG_BSP_USING_AUDIO is not set
 
 #
 # On-chip Peripheral Drivers
@@ -1046,6 +1035,12 @@ CONFIG_BSP_USING_UART=y
 CONFIG_BSP_USING_UART1=y
 # CONFIG_BSP_UART1_RX_USING_DMA is not set
 # CONFIG_BSP_UART1_TX_USING_DMA is not set
+CONFIG_BSP_USING_I2C=y
+# CONFIG_BSP_USING_I2C1 is not set
+CONFIG_BSP_USING_I2C2=y
+CONFIG_BSP_I2C2_SCL_PIN=81
+CONFIG_BSP_I2C2_SDA_PIN=80
+# CONFIG_BSP_USING_I2C3 is not set
 # CONFIG_BSP_USING_TIM is not set
 CONFIG_BSP_USING_PWM=y
 # CONFIG_BSP_USING_PWM2 is not set
