--- a/.config
+++ b/.config
@@ -387,7 +387,6 @@ CONFIG_RT_USING_CPLUSPLUS=y
 # LVGL: powerful and easy-to-use embedded GUI library
 #
 # CONFIG_PKG_USING_LVGL is not set
-# CONFIG_PKG_USING_LITTLEVGL2RTT is not set
 # CONFIG_PKG_USING_LV_MUSIC_DEMO is not set
 # CONFIG_PKG_USING_GUI_GUIDER_DEMO is not set
 
@@ -723,6 +722,7 @@ CONFIG_SDIO_MAX_FREQ=1000000
 # CONFIG_PKG_USING_UKAL is not set
 # CONFIG_PKG_USING_DIGITALCTRL is not set
 # CONFIG_PKG_USING_KISSFFT is not set
+# CONFIG_PKG_USING_CMSIS_DSP is not set
 
 #
 # miscellaneous packages
@@ -945,6 +945,7 @@ CONFIG_SDIO_MAX_FREQ=1000000
 #
 # CONFIG_PKG_USING_ARDUINO_ADAFRUIT_GFX_LIBRARY is not set
 # CONFIG_PKG_USING_ARDUINO_U8G2 is not set
+# CONFIG_PKG_USING_ARDUINO_TFT_ESPI is not set
 # CONFIG_PKG_USING_ARDUINO_ADAFRUIT_ST7735 is not set
 # CONFIG_PKG_USING_ARDUINO_ADAFRUIT_SSD1306 is not set
 # CONFIG_PKG_USING_ARDUINO_ADAFRUIT_ILI9341 is not set
@@ -1025,7 +1026,9 @@ CONFIG_BSP_USING_ONBOARD_LCD_PWM_BL=y
 CONFIG_BSP_USING_FS=y
 CONFIG_BSP_USING_SDCARD_FATFS=y
 # CONFIG_BSP_USING_FS_AUTO_MOUNT is not set
-# CONFIG_BSP_USING_AUDIO is not set
+CONFIG_BSP_USING_AUDIO=y
+CONFIG_BSP_USING_AUDIO_PLAY=y
+# CONFIG_BSP_USING_AUDIO_RECORD is not set
 
 #
 # On-chip Peripheral Drivers
