08-12 16:40, update Nes Simulator

--- a/.config
+++ b/.config
@@ -1051,7 +1051,7 @@ CONFIG_BSP_USING_FS=y
 CONFIG_BSP_USING_SDCARD_FATFS=y
 # CONFIG_BSP_USING_FS_AUTO_MOUNT is not set
 # CONFIG_BSP_USING_AUDIO is not set
-# CONFIG_BSP_USING_NES is not set
+CONFIG_BSP_USING_NES=y
 
 #
 # On-chip Peripheral Drivers
