--- a/.config
+++ b/.config
@@ -183,7 +183,10 @@ CONFIG_RT_MMCSD_MAX_PARTITION=16
 CONFIG_RT_SDIO_DEBUG=y
 # CONFIG_RT_USING_SPI is not set
 # CONFIG_RT_USING_WDT is not set
-# CONFIG_RT_USING_AUDIO is not set
+CONFIG_RT_USING_AUDIO=y
+CONFIG_RT_AUDIO_REPLAY_MP_BLOCK_SIZE=4096
+CONFIG_RT_AUDIO_REPLAY_MP_BLOCK_COUNT=2
+CONFIG_RT_AUDIO_RECORD_PIPE_SIZE=2048
 # CONFIG_RT_USING_SENSOR is not set
 # CONFIG_RT_USING_TOUCH is not set
 # CONFIG_RT_USING_HWCRYPTO is not set
@@ -287,6 +290,11 @@ CONFIG_RT_USING_CPLUSPLUS11=y
 #
 # CONFIG_PKG_USING_WLAN_WICED is not set
 # CONFIG_PKG_USING_RW007 is not set
+
+#
+# CYW43012 WiFi
+#
+# CONFIG_PKG_USING_WLAN_CYW43012 is not set
 # CONFIG_PKG_USING_COAP is not set
 # CONFIG_PKG_USING_NOPOLL is not set
 # CONFIG_PKG_USING_NETUTILS is not set
@@ -401,7 +409,8 @@ CONFIG_PKG_LVGL_DISP_REFR_PERIOD=5
 # CONFIG_PKG_USING_LVGL_SQUARELINE is not set
 # CONFIG_PKG_LVGL_USING_EXAMPLES is not set
 # CONFIG_PKG_LVGL_USING_DEMOS is not set
-CONFIG_PKG_LVGL_USING_V08038=y
+CONFIG_PKG_LVGL_USING_V08039=y
+# CONFIG_PKG_LVGL_USING_V08038 is not set
 # CONFIG_PKG_LVGL_USING_V08037 is not set
 # CONFIG_PKG_LVGL_USING_V08036 is not set
 # CONFIG_PKG_LVGL_USING_V08035 is not set
@@ -413,8 +422,8 @@ CONFIG_PKG_LVGL_USING_V08038=y
 # CONFIG_PKG_LVGL_USING_V08020 is not set
 # CONFIG_PKG_LVGL_USING_V8_3_LATEST_VERSION is not set
 # CONFIG_PKG_LVGL_USING_LATEST_VERSION is not set
-CONFIG_PKG_LVGL_VER_NUM=0x08038
-CONFIG_PKG_LVGL_VER="v8.3.8"
+CONFIG_PKG_LVGL_VER_NUM=0x080309
+CONFIG_PKG_LVGL_VER="v8.3.9"
 # CONFIG_PKG_USING_LV_MUSIC_DEMO is not set
 # CONFIG_PKG_USING_GUI_GUIDER_DEMO is not set
 
@@ -491,6 +500,7 @@ CONFIG_PKG_LVGL_VER="v8.3.8"
 # CONFIG_PKG_USING_ARMV7M_DWT_TOOL is not set
 # CONFIG_PKG_USING_VOFA_PLUS is not set
 # CONFIG_PKG_USING_RT_TRACE is not set
+# CONFIG_PKG_USING_ZDEBUG is not set
 
 #
 # system packages
@@ -527,6 +537,8 @@ CONFIG_PKG_LVGL_VER="v8.3.8"
 # CONFIG_PKG_USING_UC_COMMON is not set
 # CONFIG_PKG_USING_UC_MODBUS is not set
 # CONFIG_PKG_USING_FREERTOS_WRAPPER is not set
+# CONFIG_PKG_USING_LITEOS_SDK is not set
+# CONFIG_PKG_USING_TZ_DATABASE is not set
 # CONFIG_PKG_USING_CAIRO is not set
 # CONFIG_PKG_USING_PIXMAN is not set
 # CONFIG_PKG_USING_PARTITION is not set
@@ -563,6 +575,8 @@ CONFIG_PKG_LVGL_VER="v8.3.8"
 # CONFIG_PKG_USING_AGILE_UPGRADE is not set
 # CONFIG_PKG_USING_FLASH_BLOB is not set
 # CONFIG_PKG_USING_MLIBC is not set
+# CONFIG_PKG_USING_TASK_MSG_BUS is not set
+# CONFIG_PKG_USING_SFDB is not set
 
 #
 # peripheral libraries and drivers
@@ -783,7 +797,12 @@ CONFIG_SDIO_MAX_FREQ=1000000
 # CONFIG_PKG_USING_COWSAY is not set
 # CONFIG_PKG_USING_MORSE is not set
 # CONFIG_PKG_USING_LIBCSV is not set
-# CONFIG_PKG_USING_OPTPARSE is not set
+CONFIG_PKG_USING_OPTPARSE=y
+CONFIG_PKG_OPTPARSE_PATH="/packages/misc/optparse"
+CONFIG_PKG_USING_OPTPARSE_V100=y
+# CONFIG_PKG_USING_OPTPARSE_LATEST_VERSION is not set
+CONFIG_PKG_OPTPARSE_VER="v1.0.0"
+# CONFIG_OPTPARSE_USING_DEMO is not set
 # CONFIG_PKG_USING_FASTLZ is not set
 # CONFIG_PKG_USING_MINILZO is not set
 # CONFIG_PKG_USING_QUICKLZ is not set
@@ -1055,7 +1074,7 @@ CONFIG_BSP_USING_FS=y
 CONFIG_BSP_USING_SDCARD_FATFS=y
 # CONFIG_BSP_USING_FS_AUTO_MOUNT is not set
 # CONFIG_BSP_USING_AUDIO is not set
-CONFIG_BSP_USING_NES=y
+# CONFIG_BSP_USING_NES is not set
 
 #
 # On-chip Peripheral Drivers
@@ -1065,7 +1084,12 @@ CONFIG_BSP_USING_UART=y
 CONFIG_BSP_USING_UART1=y
 # CONFIG_BSP_UART1_RX_USING_DMA is not set
 # CONFIG_BSP_UART1_TX_USING_DMA is not set
-# CONFIG_BSP_USING_I2C is not set
+CONFIG_BSP_USING_I2C=y
+# CONFIG_BSP_USING_I2C1 is not set
+CONFIG_BSP_USING_I2C2=y
+CONFIG_BSP_I2C2_SCL_PIN=81
+CONFIG_BSP_I2C2_SDA_PIN=80
+# CONFIG_BSP_USING_I2C3 is not set
 # CONFIG_BSP_USING_TIM is not set
 CONFIG_BSP_USING_PWM=y
 # CONFIG_BSP_USING_PWM2 is not set
