--- a/applications/Utils/ResourceManager/SConscript
+++ b/applications/Utils/ResourceManager/SConscript
@@ -13,7 +13,7 @@ for d in list:
     if os.path.isfile(os.path.join(path, 'SConscript')):
         group = group + SConscript(os.path.join(d, 'SConscript'))
 
-group = group + DefineGroup('PageManager', src, depend = ['PKG_USING_LVGL'], CPPPATH = CPPPATH)
+group = group + DefineGroup('ResourceManager', src, depend = ['PKG_USING_LVGL'], CPPPATH = CPPPATH)
 
 Return('group')
 
