--- a/.config
+++ b/.config
@@ -134,14 +134,19 @@ CONFIG_RT_DFS_ELM_LFN_UNICODE_0=y
 CONFIG_RT_DFS_ELM_LFN_UNICODE=0
 CONFIG_RT_DFS_ELM_MAX_LFN=255
 CONFIG_RT_DFS_ELM_DRIVES=2
-CONFIG_RT_DFS_ELM_MAX_SECTOR_SIZE=512
+CONFIG_RT_DFS_ELM_MAX_SECTOR_SIZE=4096
 # CONFIG_RT_DFS_ELM_USE_ERASE is not set
 CONFIG_RT_DFS_ELM_REENTRANT=y
 CONFIG_RT_DFS_ELM_MUTEX_TIMEOUT=3000
 CONFIG_RT_USING_DFS_DEVFS=y
 CONFIG_RT_USING_DFS_ROMFS=y
 # CONFIG_RT_USING_DFS_RAMFS is not set
-# CONFIG_RT_USING_FAL is not set
+CONFIG_RT_USING_FAL=y
+CONFIG_FAL_DEBUG_CONFIG=y
+CONFIG_FAL_DEBUG=1
+CONFIG_FAL_PART_HAS_TABLE_CFG=y
+CONFIG_FAL_USING_SFUD_PORT=y
+CONFIG_FAL_USING_NOR_FLASH_DEV_NAME="norflash0"
 # CONFIG_RT_USING_LWP is not set
 
 #
@@ -181,7 +186,18 @@ CONFIG_RT_MMCSD_STACK_SIZE=1024
 CONFIG_RT_MMCSD_THREAD_PREORITY=22
 CONFIG_RT_MMCSD_MAX_PARTITION=16
 CONFIG_RT_SDIO_DEBUG=y
-# CONFIG_RT_USING_SPI is not set
+CONFIG_RT_USING_SPI=y
+# CONFIG_RT_USING_SPI_BITOPS is not set
+# CONFIG_RT_USING_QSPI is not set
+# CONFIG_RT_USING_SPI_MSD is not set
+CONFIG_RT_USING_SFUD=y
+CONFIG_RT_SFUD_USING_SFDP=y
+CONFIG_RT_SFUD_USING_FLASH_INFO_TABLE=y
+# CONFIG_RT_SFUD_USING_QSPI is not set
+CONFIG_RT_SFUD_SPI_MAX_HZ=50000000
+# CONFIG_RT_DEBUG_SFUD is not set
+# CONFIG_RT_USING_ENC28J60 is not set
+# CONFIG_RT_USING_SPI_WIFI is not set
 # CONFIG_RT_USING_WDT is not set
 CONFIG_RT_USING_AUDIO=y
 CONFIG_RT_AUDIO_REPLAY_MP_BLOCK_SIZE=4096
@@ -356,6 +372,7 @@ CONFIG_RT_USING_CPLUSPLUS11=y
 # CONFIG_PKG_USING_ZFTP is not set
 # CONFIG_PKG_USING_WOL is not set
 # CONFIG_PKG_USING_ZEPHYR_POLLING is not set
+# CONFIG_PKG_USING_RTT_MATTER_ADAPTATION_LAYER is not set
 
 #
 # security packages
@@ -401,29 +418,7 @@ CONFIG_RT_USING_CPLUSPLUS11=y
 #
 # LVGL: powerful and easy-to-use embedded GUI library
 #
-CONFIG_PKG_USING_LVGL=y
-CONFIG_PKG_LVGL_PATH="/packages/multimedia/LVGL/LVGL"
-CONFIG_PKG_LVGL_THREAD_PRIO=20
-CONFIG_PKG_LVGL_THREAD_STACK_SIZE=4096
-CONFIG_PKG_LVGL_DISP_REFR_PERIOD=5
-# CONFIG_PKG_USING_LVGL_SQUARELINE is not set
-# CONFIG_PKG_LVGL_USING_EXAMPLES is not set
-# CONFIG_PKG_LVGL_USING_DEMOS is not set
-CONFIG_PKG_LVGL_USING_V08039=y
-# CONFIG_PKG_LVGL_USING_V08038 is not set
-# CONFIG_PKG_LVGL_USING_V08037 is not set
-# CONFIG_PKG_LVGL_USING_V08036 is not set
-# CONFIG_PKG_LVGL_USING_V08035 is not set
-# CONFIG_PKG_LVGL_USING_V08034 is not set
-# CONFIG_PKG_LVGL_USING_V08033 is not set
-# CONFIG_PKG_LVGL_USING_V08032 is not set
-# CONFIG_PKG_LVGL_USING_V08031 is not set
-# CONFIG_PKG_LVGL_USING_V08030 is not set
-# CONFIG_PKG_LVGL_USING_V08020 is not set
-# CONFIG_PKG_LVGL_USING_V8_3_LATEST_VERSION is not set
-# CONFIG_PKG_LVGL_USING_LATEST_VERSION is not set
-CONFIG_PKG_LVGL_VER_NUM=0x080309
-CONFIG_PKG_LVGL_VER="v8.3.9"
+# CONFIG_PKG_USING_LVGL is not set
 # CONFIG_PKG_USING_LV_MUSIC_DEMO is not set
 # CONFIG_PKG_USING_GUI_GUIDER_DEMO is not set
 
@@ -1070,9 +1065,15 @@ CONFIG_BSP_USING_EXT_FMC_IO=y
 CONFIG_BSP_USING_FMC=y
 CONFIG_BSP_USING_ONBOARD_LCD=y
 CONFIG_BSP_USING_ONBOARD_LCD_PWM_BL=y
+# CONFIG_BSP_USING_ENC28j60 is not set
+CONFIG_BSP_USING_SPI_FLASH=y
 CONFIG_BSP_USING_FS=y
 CONFIG_BSP_USING_SDCARD_FATFS=y
-# CONFIG_BSP_USING_FS_AUTO_MOUNT is not set
+CONFIG_BSP_USING_FS_AUTO_MOUNT=y
+# CONFIG_BSP_USING_FLASH_FATFS is not set
+CONFIG_BSP_USING_FAL=y
+# CONFIG_BSP_USING_BOOTLOADER is not set
+# CONFIG_BSP_USING_EASYFLASH is not set
 # CONFIG_BSP_USING_AUDIO is not set
 # CONFIG_BSP_USING_NES is not set
 
@@ -1084,12 +1085,14 @@ CONFIG_BSP_USING_UART=y
 CONFIG_BSP_USING_UART1=y
 # CONFIG_BSP_UART1_RX_USING_DMA is not set
 # CONFIG_BSP_UART1_TX_USING_DMA is not set
-CONFIG_BSP_USING_I2C=y
-# CONFIG_BSP_USING_I2C1 is not set
-CONFIG_BSP_USING_I2C2=y
-CONFIG_BSP_I2C2_SCL_PIN=81
-CONFIG_BSP_I2C2_SDA_PIN=80
-# CONFIG_BSP_USING_I2C3 is not set
+# CONFIG_BSP_USING_I2C is not set
+CONFIG_BSP_USING_ON_CHIP_FLASH=y
+# CONFIG_BSP_USING_SOFT_SPI is not set
+CONFIG_BSP_USING_SPI=y
+# CONFIG_BSP_USING_SPI1 is not set
+CONFIG_BSP_USING_SPI2=y
+# CONFIG_BSP_SPI2_TX_USING_DMA is not set
+# CONFIG_BSP_SPI2_RX_USING_DMA is not set
 # CONFIG_BSP_USING_TIM is not set
 CONFIG_BSP_USING_PWM=y
 # CONFIG_BSP_USING_PWM2 is not set
