--- a/HAL/SConscript
+++ b/HAL/SConscript
@@ -28,7 +28,7 @@ if GetDepend(['BSP_USING_SDCARD_FATFS']):
 
 #add spi flash
 if GetDepend(['BSP_USING_SPI_FLASH']):
-    src += Glob('HAL_SPIFlash.cpp')
+    src += Glob('HAL_SPI_Flash.cpp')
     
 
 CPPDEFINES = ['STM32F407xx']
