--- a/.config
+++ b/.config
@@ -419,6 +419,19 @@ CONFIG_RT_USING_CPLUSPLUS11=y
 # LVGL: powerful and easy-to-use embedded GUI library
 #
 # CONFIG_PKG_USING_LVGL is not set
+# CONFIG_PKG_LVGL_USING_V08039 is not set
+# CONFIG_PKG_LVGL_USING_V08038 is not set
+# CONFIG_PKG_LVGL_USING_V08037 is not set
+# CONFIG_PKG_LVGL_USING_V08036 is not set
+# CONFIG_PKG_LVGL_USING_V08035 is not set
+# CONFIG_PKG_LVGL_USING_V08034 is not set
+# CONFIG_PKG_LVGL_USING_V08033 is not set
+# CONFIG_PKG_LVGL_USING_V08032 is not set
+# CONFIG_PKG_LVGL_USING_V08031 is not set
+# CONFIG_PKG_LVGL_USING_V08030 is not set
+# CONFIG_PKG_LVGL_USING_V08020 is not set
+# CONFIG_PKG_LVGL_USING_V8_3_LATEST_VERSION is not set
+# CONFIG_PKG_LVGL_USING_LATEST_VERSION is not set
 # CONFIG_PKG_USING_LV_MUSIC_DEMO is not set
 # CONFIG_PKG_USING_GUI_GUIDER_DEMO is not set
 
