--- a/.config
+++ b/.config
@@ -418,12 +418,19 @@ CONFIG_RT_USING_CPLUSPLUS11=y
 #
 # LVGL: powerful and easy-to-use embedded GUI library
 #
-# CONFIG_PKG_USING_LVGL is not set
+CONFIG_PKG_USING_LVGL=y
+CONFIG_PKG_LVGL_PATH="/packages/multimedia/LVGL/LVGL"
+CONFIG_PKG_LVGL_THREAD_PRIO=20
+CONFIG_PKG_LVGL_THREAD_STACK_SIZE=4096
+CONFIG_PKG_LVGL_DISP_REFR_PERIOD=5
+# CONFIG_PKG_USING_LVGL_SQUARELINE is not set
+# CONFIG_PKG_LVGL_USING_EXAMPLES is not set
+# CONFIG_PKG_LVGL_USING_DEMOS is not set
 # CONFIG_PKG_LVGL_USING_V08039 is not set
 # CONFIG_PKG_LVGL_USING_V08038 is not set
 # CONFIG_PKG_LVGL_USING_V08037 is not set
 # CONFIG_PKG_LVGL_USING_V08036 is not set
-# CONFIG_PKG_LVGL_USING_V08035 is not set
+CONFIG_PKG_LVGL_USING_V08035=y
 # CONFIG_PKG_LVGL_USING_V08034 is not set
 # CONFIG_PKG_LVGL_USING_V08033 is not set
 # CONFIG_PKG_LVGL_USING_V08032 is not set
@@ -432,6 +439,8 @@ CONFIG_RT_USING_CPLUSPLUS11=y
 # CONFIG_PKG_LVGL_USING_V08020 is not set
 # CONFIG_PKG_LVGL_USING_V8_3_LATEST_VERSION is not set
 # CONFIG_PKG_LVGL_USING_LATEST_VERSION is not set
+CONFIG_PKG_LVGL_VER_NUM=0x080305
+CONFIG_PKG_LVGL_VER="v8.3.5"
 # CONFIG_PKG_USING_LV_MUSIC_DEMO is not set
 # CONFIG_PKG_USING_GUI_GUIDER_DEMO is not set
 
@@ -816,6 +825,10 @@ CONFIG_PKG_OPTPARSE_VER="v1.0.0"
 # CONFIG_PKG_USING_QUICKLZ is not set
 # CONFIG_PKG_USING_LZMA is not set
 # CONFIG_PKG_USING_MULTIBUTTON is not set
+# CONFIG_PKG_USING_MULTIBUTTON_V110 is not set
+# CONFIG_PKG_USING_MULTIBUTTON_V103 is not set
+# CONFIG_PKG_USING_MULTIBUTTON_V102 is not set
+# CONFIG_PKG_USING_MULTIBUTTON_LATEST_VERSION is not set
 # CONFIG_PKG_USING_FLEXIBLE_BUTTON is not set
 # CONFIG_PKG_USING_CANFESTIVAL is not set
 # CONFIG_PKG_USING_ZLIB is not set
