--- a/applications/Utils/lv_anim_label/SConscript
+++ b/applications/Utils/lv_anim_label/SConscript
@@ -4,26 +4,9 @@ import rtconfig
 
 cwd = GetCurrentDir()
 group = []
-src = Glob('*.cpp')
+src = Glob('*.c')
+src += Glob('*.cpp')
 CPPPATH = [cwd]
-
-src += Glob('_Template/*.cpp')
-CPPPATH += [cwd + '/_Template']
-
-src += Glob('Dialplate/*.cpp')
-CPPPATH += [cwd + '/Dialplate']
-
-src += Glob('StartUp/*.cpp')
-CPPPATH += [cwd + '/StartUp']
-
-src += Glob('SystemInfos/*.cpp')
-CPPPATH += [cwd + '/SystemInfos']
-
-src += Glob('StatusBar/*.cpp')
-CPPPATH += [cwd + '/StatusBar']
-
-src += Glob('Reader/*.cpp')
-CPPPATH += [cwd + '/Reader']
 
 list = os.listdir(cwd)
 for d in list:
