--- a/.config
+++ b/.config
@@ -76,7 +76,7 @@ CONFIG_RT_USING_DEVICE=y
 # CONFIG_RT_USING_DEVICE_OPS is not set
 # CONFIG_RT_USING_INTERRUPT_INFO is not set
 CONFIG_RT_USING_CONSOLE=y
-CONFIG_RT_CONSOLEBUF_SIZE=128
+CONFIG_RT_CONSOLEBUF_SIZE=512
 CONFIG_RT_CONSOLE_DEVICE_NAME="uart1"
 CONFIG_RT_VER_NUM=0x40101
 CONFIG_ARCH_ARM=y
@@ -102,7 +102,7 @@ CONFIG_FINSH_THREAD_STACK_SIZE=4096
 CONFIG_FINSH_USING_HISTORY=y
 CONFIG_FINSH_HISTORY_LINES=5
 CONFIG_FINSH_USING_SYMTAB=y
-CONFIG_FINSH_CMD_SIZE=80
+CONFIG_FINSH_CMD_SIZE=128
 CONFIG_MSH_USING_BUILT_IN_COMMANDS=y
 CONFIG_FINSH_USING_DESCRIPTION=y
 # CONFIG_FINSH_ECHO_DISABLE_DEFAULT is not set
@@ -160,7 +160,7 @@ CONFIG_RT_USING_SERIAL=y
 CONFIG_RT_USING_SERIAL_V1=y
 # CONFIG_RT_USING_SERIAL_V2 is not set
 CONFIG_RT_SERIAL_USING_DMA=y
-CONFIG_RT_SERIAL_RB_BUFSZ=64
+CONFIG_RT_SERIAL_RB_BUFSZ=256
 # CONFIG_RT_USING_CAN is not set
 CONFIG_RT_USING_HWTIMER=y
 # CONFIG_RT_USING_CPUTIME is not set
@@ -353,6 +353,7 @@ CONFIG_RT_USING_CPLUSPLUS11=y
 # CONFIG_PKG_USING_NMEALIB is not set
 # CONFIG_PKG_USING_PDULIB is not set
 # CONFIG_PKG_USING_BTSTACK is not set
+# CONFIG_PKG_USING_BT_CYW43012 is not set
 # CONFIG_PKG_USING_LORAWAN_ED_STACK is not set
 # CONFIG_PKG_USING_WAYZ_IOTKIT is not set
 # CONFIG_PKG_USING_MAVLINK is not set
@@ -418,8 +419,15 @@ CONFIG_RT_USING_CPLUSPLUS11=y
 #
 # LVGL: powerful and easy-to-use embedded GUI library
 #
-# CONFIG_PKG_USING_LVGL is not set
-# CONFIG_PKG_LVGL_USING_V08039 is not set
+CONFIG_PKG_USING_LVGL=y
+CONFIG_PKG_LVGL_PATH="/packages/multimedia/LVGL/LVGL"
+CONFIG_PKG_LVGL_THREAD_PRIO=20
+CONFIG_PKG_LVGL_THREAD_STACK_SIZE=4096
+CONFIG_PKG_LVGL_DISP_REFR_PERIOD=5
+# CONFIG_PKG_USING_LVGL_SQUARELINE is not set
+# CONFIG_PKG_LVGL_USING_EXAMPLES is not set
+# CONFIG_PKG_LVGL_USING_DEMOS is not set
+CONFIG_PKG_LVGL_USING_V08039=y
 # CONFIG_PKG_LVGL_USING_V08038 is not set
 # CONFIG_PKG_LVGL_USING_V08037 is not set
 # CONFIG_PKG_LVGL_USING_V08036 is not set
@@ -432,6 +440,8 @@ CONFIG_RT_USING_CPLUSPLUS11=y
 # CONFIG_PKG_LVGL_USING_V08020 is not set
 # CONFIG_PKG_LVGL_USING_V8_3_LATEST_VERSION is not set
 # CONFIG_PKG_LVGL_USING_LATEST_VERSION is not set
+CONFIG_PKG_LVGL_VER_NUM=0x080309
+CONFIG_PKG_LVGL_VER="v8.3.9"
 # CONFIG_PKG_USING_LV_MUSIC_DEMO is not set
 # CONFIG_PKG_USING_GUI_GUIDER_DEMO is not set
 
